--- a/.editorconfig
+++ b/.editorconfig
@@ -2,9 +2,21 @@ root = true
 
 # All files
 [*]
+insert_final_newline = true
+charset = utf-8
+trim_trailing_whitespace = true
 indent_style = space
-
-#### Core EditorConfig Options ####
 indent_size = 2
-tab_width = 2
-insert_final_newline = false
+
+#### Go Files ####
+[*.go]
+indent_style = tab
+indent_size = 4
+
+[go.{mod,work,work.sum,sum}]
+charset = unset
+end_of_line = unset
+insert_final_newline = unset
+trim_trailing_whitespace = unset
+indent_style = unset
+indent_size = unset
